--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       p {text-align: center; color: white}
       select {background-color: black; color: white; height:100%}
       select option:nth-child(odd) {background-color: #030303;}
-      select optgroup {background-color: #222222; font-size: 3vh}
+      select optgroup {background-color: #222222; font-size: 5vh}
       table, td, th, tr{color: white;border: 1px solid black; border-collapse: collapse}
       .addcontrols {position: absolute; bottom: 0px; width:100%; height:6%; display: flex; align-items: center; flex-direction: row;}
       .totaltable {}
       .cantitem {text-align: right}
-      .controls {position:absolute; top:10%; width:100%; height:90%}
-      .controlscontainer {position:absolute;right:0px; top:0px; left:69.5%; height:90%; width:30%;background-color: #222233;border:1px solid black; z-index:1;overflow-y: auto}
+      .controls {position:absolute; top:60px; width:100%; height:90%}
+      .controlscontainer {position:absolute;right:0px; top:0px; left:69.5%; bottom:15%; width:30%;background-color: #222233;border:1px solid black; z-index:1;overflow-y: auto}
       .leftPanel {position:absolute;width: 6vh; height: 100%;z-index:3; left:7px; top:11%; }
       .modalReservationTime {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
       #modalCalendar {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
@@ -30,13 +30,14 @@
       .reserved {position:absolute; width:20px; height:20px; top:-16%; left:-16%; border-radius: 50%; background-color: #ffa200; z-index:200}
       .reservationParameters {width: 100%;height;30%;margin:2%}
       .reservationTimecontainer { padding: 5px;overflow: hidden;border: 2px solid white; border-radius: 10%; position: absolute; width:20%; height: 30%}
-      .table {border:0.5vh solid white;border-radius: 7%; position:absolute;width:10vh;height:10vh;background-color: #000000;text-align: center;vertical-align:center;line-height:5vh}
+      .table {border:0.5vh solid white;border-radius: 7%; position:absolute;width:10vh;height:10vh;background-color: #000000;text-align: center;line-height:5vh;font-size: 2.7vh;display: flex; align-items: center; justify-content: center; flex-direction: column;}
       .table:hover {cursor: pointer; background-color: #414141}
       .tablecontainer {position:fixed;top:0px;left:0px;width:100%; height:100%; z-index: 2; background-color: black}
       .tableheader {position:absolute;top:0px;height:10%;width:100%;text-align:center}
+      .timer { width:150%}
       .totaltable{ width:100%}
       #addproduct {height: 100%; width:15%; background-color: #ffeb38; border-radius: 0px}
-      #closetable {position:fixed;padding: 0px; margin:0px;width:30%;height:10%;bottom:0px;background-color:#cc2222;color:white;font-size:5vh;border-radius: 5%}
+      #closetable {position:fixed;padding: 0px; margin:0px;width:30%;height:15%;bottom:0px;background-color:#cc2222;color:white;font-size:20px;border-radius: 5%}
       #CloseAllTables {position: absolute;top:14%;width: 100%}
       #configTableButton {width: 10%; margin: 5px;}
       #configTableModal {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
@@ -45,11 +46,11 @@
       #leftPanelButton:focus {outline: none;}
       #listReservations {position: absolute;top:21%;width:100%}
       #modalWaiterContainer {overflow: hidden;border: 2px solid white;border-radius: 10%;display: flex; align-items: center; justify-content: center; flex-direction: column;}
-      #opentable {width:30%; height:100%; position: fixed; top:8%;z-index:99;background-color:#22cc22;color:white;font-size:5vh}
+      #opentable {width:30%; height:100%; position: fixed; top:50px;z-index:99;background-color:#22cc22;color:white;font-size:5vh}
       #orderTable {width:100%}
       #resetTablesOrders {position: absolute;top: 0;width: 100%}
       #resetTablesReservations {position: absolute;top:7%;width: 100%}
-      #reservetable {margin: 5px; font-size: 3vh !important; line-height:2.5vh; width:5vh; height:5vh; position: absolute;right: 0;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 30%}
+      #reservetable {margin: 5px; font-size: 25px !important; line-height:2.5vh; width:40px; height:40px; position: absolute;right: 0;z-index:99;background-color:#ffa200;color:white;font-size:5vh; border-radius: 30%}
       #reservationParameters {height:75%; width:96%;display: flex; align-items: center; justify-content: center; flex-direction: column}
       #waiterLogin {margin-bottom: 0;border: 0px;width: 101%; bottom: 0}
   </style>
@@ -133,10 +134,10 @@
     </div>
     <div id="modalWaiter" class='modalWaiter'>
       <div id="modalWaiterContainer">
-        <p style='margin: 3%'>Quien atiende?</p>
-        <select id="waiters"></select>
-        <input type="number" id="waiterPIN" style='margin:5px' placeholder="PIN">
-        <input type="button" id="waiterLogin" value="Ingresar">
+        <p style='font-size:5vh;margin: 1vh'>Quien atiende?</p>
+        <select style='font-size:5vh;margin:1vh' id="waiters"></select>
+        <input style='width: 50%;font-size:5vh;margin:1vh;text-align:center' type="password" id="waiterPIN" style='margin:5px' placeholder="PIN">
+        <input style='font-size:5vh;margin-top:1vh' type="button" id="waiterLogin" value="Ingresar">
       </div>
     </div>
     <div class="configTableModal" id='configTableModal'>
@@ -673,4 +674,8 @@
       resetNotification.play();
     });
   })
+
+  Object.defineProperty(console, '_commandLineAPI',
+   { get : function() { throw 'Nooo!' } })
+
 </script>
